Fixed cookies for testing, queue start
Still TODO: when loading list, already check things that are in your
queue, make queue pretty, only show scrollbar when necessary (auto, I
think)

--- a/css/main.css
+++ b/css/main.css
@@ -72,3 +72,11 @@ html, body {
   font-size: 50px;
   text-align: right;
 }
+
+.queue {
+  overflow-x: scroll;
+}
+
+.queue-track {
+  float: left;
+}
